@@ -4,8 +4,12 @@
 """A basic ftpd storing passwords as hash digests (platform independent).
 """
 
-import md5
 import os
+try:
+    from hashlib import md5
+except ImportError:
+    # backward compatibility with Python < 2.5
+    from md5 import new as md5
 
 from pyftpdlib import ftpserver
 
@@ -13,12 +17,12 @@ from pyftpdlib import ftpserver
 class DummyMD5Authorizer(ftpserver.DummyAuthorizer):
 
     def validate_authentication(self, username, password):
-        hash = md5.new(password).hexdigest()
+        hash = md5(password).hexdigest()
         return self.user_table[username]['pwd'] == hash
 
 if __name__ == "__main__":
     # get a hash digest from a clear-text password
-    hash = md5.new('12345').hexdigest()
+    hash = md5('12345').hexdigest()
     authorizer = DummyMD5Authorizer()
     authorizer.add_user('user', hash, os.getcwd(), perm='elradfmw')
     authorizer.add_anonymous(os.getcwd())
